--- a/nodes/Esep2/Esep/index.html
+++ b/nodes/Esep2/Esep/index.html
@@ -15,84 +15,64 @@
         <div class="row">
             <div class="contentWrapper">
                 <div class="esepTitle">
-                    Химия-технологиялық жүйелердің моделдерін жіктеу
+                    Негізгі технологиялық компоненттер
                 </div>
                 <div class="content">
                     <div class="dragndropsection">
-
-                        <div class="col s12">
-                            <div class="tree col s12">
-                                <ul class="firstUl">
-                                    <li class="subtree">
-                                        <p>ХТЖ-ң моделдері</p>
-                                        <ul>
-                                            <li class="subtree">
-                                                <p> қорытынды (сапалы)</p>
-                                                <ul>
-                                                    <li class="subtree">
-                                                        <p id="ans01" class="droppable droppable-item"></p>
-                                                    </li>
-                                                    <li class="subtree drop-table">
-                                                        <p id="ans02" class="droppable droppable-item"></p>
-                                                        <ul>
-                                                            <li>
-                                                                <p id="ans05" class="droppable droppable-item"></p>
-                                                            </li>
-                                                            <li>
-                                                                <p id="ans06" class="droppable droppable-item"></p>
-                                                            </li>
-                                                            <li>
-                                                                <p id="ans07" class="droppable droppable-item"></p>
-                                                            </li>
-                                                            <li>
-                                                                <p id="ans08" class="droppable droppable-item"></p>
-                                                            </li>
-                                                        </ul>
-                                                    </li>
-                                                </ul>
-                                            </li>
-                                            <li class="subtree">
-                                                <p> Математикалык</p>
-                                                <ul>
-                                                    <li class="subtree">
-                                                        <p id="ans03" class="droppable droppable-item"></p>
-                                                    </li>
-                                                    <li class="subtree drop-table">
-                                                        <p id="ans04" class="droppable droppable-item"></p>
-                                                        <ul>
-                                                            <li>
-                                                                <p id="ans09" class="droppable droppable-item"></p>
-                                                            </li>
-                                                            <li>
-                                                                <p id="ans10" class="droppable droppable-item"></p>
-                                                            </li>
-                                                            <li>
-                                                                <p id="ans11" class="droppable droppable-item"></p>
-                                                            </li>
-                                                        </ul>
-                                                    </li>
-                                                </ul>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </div>
+                        <div class="row">
                             <div class="col s12">
-                                <ul id="ansList" class="col s12 table table-hover">
-                                    <li id="01" class="draggable ">Операциялы-сипаттамалы</li>
-                                    <li id="02" class="draggable ">Иконографиялық</li>
-                                    <li id="03" class="draggable ">Символикалық (аналитикалық)</li>
-                                    <li id="04" class="draggable ">Иконографиялық</li>
-                                    <li id="05" class="draggable ">Функционалдық-үлгілер</li>
-                                    <li id="06" class="draggable ">Құрылымдылық-үлгілер</li>
-                                    <li id="07" class="draggable ">Операциялық-үлгілер</li>
-                                    <li id="08" class="draggable ">Технологиялық-үлгілер</li>
-                                    <li id="09" class="draggable ">Топологиялық-үлгілер</li>
-                                    <li id="10" class="draggable ">Құрымдылық-үлгілер</li>
-                                    <li id="11" class="draggable ">Торлы</li>
-                                </ul>
+                                <div class="row">
+                                    <div class="col s6">
+                                        <div id="ans01" class="col s12 droppable-item ">
+                                            Шикізат
+                                        </div>
+                                        <div id="ans02" class="col s12 droppable-item">
+                                            Жартылай өнімдер
+                                        </div>
+                                        <div id="ans03" class="col s12 droppable-item">
+                                            Негізгі өнім
+                                        </div>
+                                        <div id="ans04" class="col s12 droppable-item">
+                                            Қосымша немесе жанама өнім
+                                        </div>
+                                        <div id="ans05" class="col s12 droppable-item">
+                                            Қалдықтар
+                                        </div>
+                                        <div id="ans06" class="col s12 droppable-item">
+                                            Су
+                                        </div>
+                                        <div id="ans07" class="col s12 droppable-item">
+                                            Энергия
+                                        </div>
+                                    </div>
+                                    <ul class="col s6" id="ansList">
+                                        <li id="01" class="col s12 draggable">
+                                            дегеніміз негізгі заттан және басқа да қоспалардан тұратын күрделі зат. Шикізат жұмсалуына байланысты негізгі (технологиялық) және көмекші болып екіге бөлінеді. Негізгі шикізат тікелей өнім өндіру үшін қолданылады, ал көмекші шикізат процестің жүруін
+                                            қамтамасыз ету үшін қолданылады.
+                                        </li>
+                                        <li id="02" class="col s12 draggable">
+                                            дегеніміз өндірістің бір немесе бірнеше сатысынан кейін алынатын және келесі сатыда шикізат ретінде қолданылатын заттар.
+                                        </li>
+                                        <li id="03" class="col s12 draggable">
+                                            дегеніміз өндірістің мақсатты өнімі. Мысалы, күкірт қышқылы өндірісіндегі негізгі өнім – күкірт қышқылы, ал күкірт диоксиді мен күкірт үшоксидтері жартылай өнімдер.
+                                        </li>
+                                        <li id="04" class="col s12 draggable">
+                                            дегеніміз процестің нәтижесінде негізгі өніммен қатар түзілетін зат.
+                                        </li>
+                                        <li id="05" class="col s12 draggable">
+                                            дегеніміз өндірісте пайда болған қолданылмайтын заттар мен материалдар.
+                                        </li>
+                                        <li id="06" class="col s12 draggable">
+                                            химиялық өндірісте тек қана салқын- және жылутасымалдағыш ғана емес, сонымен қатар шикізат немесе өнім болуы мүмкін. Адамзаттың өмірінде өте үлкен орын алуына және өте көп қолданылуына байланысты оны ерекше бөліп, химиялық өндірістің компоненті ретінде қарастырады.
+                                        </li>
+                                        <li id="07" class="col s12 draggable">
+                                             химиялық өндірісті қамтамасыз ету үшін қолданылады. Энергия қорларының негізгі түріне жанатын отын кендері жатады (көмір, мұнай, табиғи газдар, шым тезек және оларды өңдеу өнімдері).
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
+
                     </div>
                     <fieldset>
                         <div id="AnsButtons">
