--- a/nodes/Esep4/Esep/index.html
+++ b/nodes/Esep4/Esep/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Esep 04</title>
+    <title>Esep 02</title>
     <link rel="stylesheet" href="../../../css/tasks/materialize.min.css">
     <link rel="stylesheet" href="../../../css/tasks/style.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -15,91 +15,96 @@
         <div class="row">
             <div class="contentWrapper">
                 <div class="esepTitle">
-                    Аммиак синтезінің функционалдық (принциптік) үлгісі
+                    Шикізаттар мен қосымша материалдардың сипаттамасы және жіктелуі
                 </div>
                 <div class="content">
                     <div class="dragndropsection">
-
-
-                        <div class="col s12">
-                            <div class="col s12 first-row-outer row">
-                                <div class="col s1 firstline">
-                                    <p>
-                                        АСҚ
-                                    </p>
-                                </div>
-                                <div class="col s8">
-                                    <div class="headline">
-                                        Шикізатты дайындау
-                                    </div>
-                                    <div class="center-content ">
-                                        <div class="row">
-                                            <div class="col s3">
-                                                <div id="ans01" class="droppable-item">
-
-                                                </div>
-                                            </div>
-                                            <div class="col s3 offset-s1">
-                                                <div id="ans02" class="droppable-item">
-
-                                                </div>
-                                            </div>
-                                            <div class="col s3 offset-s1 ">
-                                                <div id="ans03" class="droppable-item center-last"></div>
-                                            </div>
+                        <div class="row">
+                            <div class="col s6">
+                                <div class="row">
+                                    <div class="col s6">
+                                        <p class="headline ta">
+                                            Шикiзаттың құны өнiмнiң өзiндiк құнының 60-70% құрайды, бұл шикiзат мәселесiн шешуi:
+                                        </p>
+                                        <div id="ans01" class="col s12 droppable-item ">
                                         </div>
-                                        <div class="row">
-                                            <div class="col s3 droppable-item second-item offset-s2">
-                                                АСҚ-ы сығу
-                                            </div>
-
+                                        <div id="ans02" class="col s12 droppable-item">
+                                        </div>
+                                        <div id="ans03" class="col s12 droppable-item">
+                                        </div>
+                                        <div id="ans04" class="col s12 droppable-item">
                                         </div>
                                     </div>
-                                </div>
-                                <div class="col s3">
-                                    <div id="ans04" class="third-item droppable-item">
+                                    <div class="col s6">
+                                        <p class="headline ta">
+                                            Шикiзат мәселесiн шешу әртүрлi жолдармен жүзеге асырылады:
+                                        </p>
+                                        <div id="ans05" class="col s12 droppable-item">
+                                        </div>
+                                        <div id="ans06" class="col s12 droppable-item">
+                                        </div>
+                                        <div id="ans07" class="col s12 droppable-item">
+                                        </div>
+                                        <div id="ans08" class="col s12 droppable-item">
+                                        </div>
+                                        <div id="ans09" class="col s12 droppable-item">
+                                        </div>
                                     </div>
+
                                 </div>
                             </div>
-                            <div class="col s12 second-row-outer row">
-                                <div class="col s3 firstline">
-                                    <p>
-                                        NH<sub>3</sub>(C) (өнім)
-                                    </p>
-                                </div>
-                                <div class="col s7">
-                                    <div class="center-content ">
-                                        <div class="row">
-                                            <div class="col offset-s2 s4">
-                                                <div id="ans05" class="droppable-item">
-                                                </div>
-                                            </div>
-                                            <div class="col s4 offset-s2">
-                                                <div id="ans06" class="droppable-item"></div>
-                                            </div>
+                            <div class="col s6">
+
+                                <div class="row" id="ansList">
+                                    <div class="col s6">
+                                        <div id="01" class="draggable answer-item">
+                                            Арзан шикiзаттарды iздестiру және қолдану
                                         </div>
-                                        <div class="headline">
-                                            Өнімді бөлү және тазарту
+                                    </div>
+                                    <div class="col s6">
+                                        <div id="02" class="draggable answer-item">
+                                            Шоғырланған шикiзаттарды қолдану
+                                        </div>
+                                    </div>
+                                    <div class="col s6">
+                                        <div id="03" class="draggable answer-item">
+                                            Шикiзаттарды кешенді қолдану
+                                        </div>
+                                    </div>
+                                    <div class="col s6">
+                                        <div id="04" class="draggable answer-item">
+                                            Өндiрiс қалдықтарын шикiзат ретiнде қолдану.
+                                        </div>
+                                    </div>
+                                    <div class="col s6">
+                                        <div id="05" class="draggable answer-item">
+                                            Шикiзат көздерiн өндiрiске жақындату, яғни арзан жергiлiктi шикiзаттарды қолдану
+                                        </div>
+                                    </div>
+                                    <div class="col s6">
+                                        <div id="06" class="draggable answer-item">
+                                            Шоғыры төмен шикізаттарды қолдану
+                                        </div>
+                                    </div>
+                                    <div class="col s6">
+                                        <div id="07" class="draggable answer-item">
+                                            Негiзгi өндiрiстiң қалдықтарын пайдаға асыру, яғни олардан жаңа өнiмдер өндiру
+                                        </div>
+                                    </div>
+                                    <div class="col s6">
+                                        <div id="08" class="draggable answer-item">
+                                            Шикiзаттың құрамындағы негiзгi компоненттiң шоғырын жоғарылату мақсатымен оны алдын-ала байыту
+                                        </div>
+                                    </div>
+                                    <div class="col s6">
+                                        <div id="09" class="draggable answer-item">
+                                            Бiр шикiзатты экономикалық тұрғыдан тиiмдi екiншi шикiзатпен ауыстыру
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col s1 firstline second">
-                                    <p>
-                                        Химиялық айналдыру
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="col s12">
-                                <ul id="ansList" class="col s12 table table-hover">
-                                    <li id="01" class="draggable ">АСҚ-ы сығу</li>
-                                    <li id="02" class="draggable ">Салқындату</li>
-                                    <li id="03" class="draggable ">АСҚ-дан NH<sub>3</sub>-ті бөлү</li>
-                                    <li id="04" class="draggable ">Аммиак Синтезі</li>
-                                    <li id="05" class="draggable ">АСҚ-ы және NH<sub>3</sub> бөлу</li>
-                                    <li id="06" class="draggable ">Салқындату</li>
-                                </ul>
                             </div>
                         </div>
+
                     </div>
                     <fieldset>
                         <div id="AnsButtons">
