--- a/nodes/Esep6/Esep/index.html
+++ b/nodes/Esep6/Esep/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Esep 07</title>
+    <title>Esep 06</title>
     <link rel="stylesheet" href="../../../css/tasks/materialize.min.css">
     <link rel="stylesheet" href="../../../css/tasks/style.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -15,127 +15,179 @@
         <div class="row">
             <div class="contentWrapper">
                 <div class="esepTitle">
-                    Типтік технологиялық операторларды жіктеу.
+                    Химиялық өндірістің иерархиялық құрылымы
                 </div>
                 <div class="content">
                     <div class="dragndropsection">
-                        <div class="row">
-                            <div class="col s2 offset-s5 droppable-item parent">
-                                Типтік ТО
+                        <div class="row dashed-row first-row">
+                            <div class="col s1">
+                                <p>
+                                    IV
+                                </p>
                             </div>
-                        </div>
-                        <div class="row second-row">
-                            <div class="col s2 offset-s2 droppable-item">
-                                Негізгі ТО
-                            </div>
-                            <div class="col s2 offset-s4 droppable-item">
-                                Қосымша ТО
-                            </div>
-                        </div>
-                        <div class="row third-row">
-                            <div class="col s6 first-col">
-                                <div class="col s3">
-                                    <div id="ans01" class="droppable-item"></div>
-                                </div>
-                                <div class="col s3">
-                                    <div id="ans02" class="droppable-item"></div>
-                                </div>
-                                <div class="col s3">
-                                    <div id="ans03" class="droppable-item"></div>
-                                </div>
-                                <div class="col s3">
-                                    <div id="ans04" class="droppable-item"></div>
-                                </div>
-                            </div>
+                            <div class="col s2 offset-s2">
+                                <div class="droppable-item ">
 
-                            <div class="col s6 second-col">
-                                <div class="col s3 offset-s2">
-                                    <div id="ans05" class="droppable-item"></div>
                                 </div>
-                                <div class="col s3">
-                                    <div id="ans06" class="droppable-item"></div>
-                                </div>
-                                <div class="col s3">
-                                    <div id="ans07" class="droppable-item"></div>
+                            </div>
+                            <div class="col s4 offset-s2">
+                                <div id="ans01" class="droppable-item">
+
                                 </div>
                             </div>
                         </div>
-                        <div class="row bottom-content">
+                        <div class="row dashed-row second-row">
+                            <div class="col s1">
+                                <p>
+                                    III
+                                </p>
+                            </div>
+                            <div class="col s4 offset-s1">
+                                <div class="droppable-item bot-arrowed">
 
-                            <div class="col s6">
-                                <div class="col s3">
-                                    <div class="droppable-item">
-                                        <img src="assets/img/1.png" alt="">
-                                    </div>
-                                </div>
-                                <div class="col s3">
-                                    <div class="droppable-item">
-                                        <img src="assets/img/2.png" alt="">
-                                    </div>
-                                </div>
-                                <div class="col s3">
-                                    <div class="droppable-item">
-                                        <img src="assets/img/3.png" alt="">
-                                    </div>
-                                </div>
-                                <div class="col s3">
-                                    <div class="droppable-item">
-                                        <img src="assets/img/4.png" alt="">
-                                    </div>
                                 </div>
                             </div>
+                            <div class="col s4 offset-s1">
+                                <div id="ans02" class="droppable-item">
 
-                            <div class="col s6">
-                                <div class="col s3 offset-s2">
-                                    <div class="droppable-item">
-                                        <img src="assets/img/5.png" alt="">
-                                    </div>
-                                </div>
-                                <div class="col s3">
-                                    <div class="droppable-item">
-                                        <img src="assets/img/6.png" alt="">
-                                    </div>
-                                </div>
-                                <div class="col s3">
-                                    <div class="droppable-item">
-                                        <img src="assets/img/7.png" alt="">
-                                    </div>
                                 </div>
                             </div>
-                            <p class="ta">
-                                Типтік ТО-ны суреттеу
-                            </p>
                         </div>
+                        <div class="row dashed-row third-row">
+                            <div class="col s1">
+                                <p>
+                                    II
+                                </p>
+                            </div>
+                            <div class="col s4 offset-s1">
+                                <div class="bot-arrowed row">
+                                    <div class="third-row-col col s10 offset-s1"></div>
+
+                                    <div class="col s3">
+                                        <div class="bot-arrowed droppable-item"></div>
+                                    </div>
+                                    <div class="col s3">
+                                        <div class="bot-arrowed droppable-item"></div>
+                                    </div>
+                                    <div class="col s1">
+                                        <div class="bot-arrowed"></div>
+                                    </div>
+                                    <div class="col s1">
+                                        <div class="bot-arrowed"></div>
+                                    </div>
+                                    <div class="col s1">
+                                        <div class="bot-arrowed"></div>
+                                    </div>
+                                    <div class="col s3">
+                                        <div class="bot-arrowed droppable-item"></div>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="col s4 offset-s1">
+                                <div id="ans03" class="droppable-item">
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row dashed-row fourth-row">
+                            <div class="col s1">
+                                <p>
+                                    I
+                                </p>
+                            </div>
+                            <div class="col s4 offset-s1">
+                                <div class="fourth-row-col row">
+                                    <div class="col s3">
+                                        <div class="bot-arrowed bot-arrowed-second"></div>
+                                        <div class="third-row-col col s10 offset-s1"></div>
+
+                                        <div class="bot-item">
+                                            <div class="bot-arrowed droppable-item"></div>
+                                        </div>
+                                        <div class="bot-item">
+                                            <div class="bot-arrowed"></div>
+                                        </div>
+                                        <div class="bot-item">
+                                            <div class="bot-arrowed"></div>
+                                        </div>
+                                        <div class="bot-item">
+                                            <div class="bot-arrowed droppable-item"></div>
+                                        </div>
+                                    </div>
+                                    <div class="col s3">
+                                        <div class="bot-arrowed bot-arrowed-second"></div>
+                                        <div class="third-row-col col s10 offset-s1"></div>
+                                        <div class="bot-item">
+                                            <div class="bot-arrowed droppable-item"></div>
+                                        </div>
+                                        <div class="bot-item">
+                                            <div class="bot-arrowed"></div>
+                                        </div>
+                                        <div class="bot-item">
+                                            <div class="bot-arrowed"></div>
+                                        </div>
+                                        <div class="bot-item">
+                                            <div class="bot-arrowed droppable-item"></div>
+                                        </div>
+                                    </div>
+                                    <div class="col s3 offset-s3">
+                                        <div class="bot-arrowed bot-arrowed-second"></div>
+                                        <div class="third-row-col col s10 offset-s1"></div>
+                                        <div class="bot-item">
+                                            <div class="bot-arrowed droppable-item"></div>
+                                        </div>
+                                        <div class="bot-item">
+                                            <div class="bot-arrowed"></div>
+                                        </div>
+                                        <div class="bot-item">
+                                            <div class="bot-arrowed"></div>
+                                        </div>
+                                        <div class="bot-item">
+                                            <div class="bot-arrowed droppable-item"></div>
+                                        </div>
+                                    </div>
+
+
+                                </div>
+                            </div>
+                            <div class="col s4 offset-s1">
+                                <div id="ans04" class="droppable-item">
+
+                                </div>
+                            </div>
+                        </div>
+
                         <div id="ansList" class="row">
-                            <div class="col s6">
-                                <ul class="row table table-hover">
-                                    <li id="01" class="draggable col s3">
-                                        Химиялық айналдыру
-                                    </li>
-                                    <li id="02" class="draggable col s3">
-                                        Күйаралық салмақалмасу
-                                    </li>
-                                    <li id="03" class="draggable col s3">
-                                        Араластыру
-                                    </li>
-                                    <li id="04" class="draggable col s3">
-                                        Бөлу
-                                    </li>
-                                </ul>
+                            <div class="col s4">
+                                <div id="01" class="draggable answer-item">
+                                    <p>
+                                        Химиялық өнеркәсіп (зауыт) және ӨАБЖ
+                                    </p>
+                                </div>
                             </div>
-                            <div class="col s6">
-                                <ul class="row table table-hover">
-                                    <li id="05" class="draggable col s3">
-                                        Жылыту (салқындату)
-                                    </li>
-                                    <li id="06" class="draggable col s3">
-                                        Сығу (созу)
-                                    </li>
-                                    <li id="07" class="draggable col s3">
-                                        Саттардың агрегаттық күйін өзгерту
-                                    </li>
-                                </ul>
+                            <div class="col s4">
+                                <div id="02" class="draggable answer-item">
+                                    <p>
+                                        Мақсатты өнімдерді өндіру цехтарының жиынтығы және цехтарды АБЖ
+                                    </p>
+                                </div>
                             </div>
+                            <div class="col s4">
+                                <div id="03" class="draggable answer-item">
+                                    <p>
+                                        Технологиялық цехтар, бөлімдер және техгологиялық процестерді АБЖ
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col s4">
+                                <div id="04" class="draggable answer-item">
+                                    <p>
+                                        Типтік техгологиялық және процестер және АРЖ
+                                    </p>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                     <fieldset>
